@@ -1,0 +1,8 @@
+package test.listeners.issue3082;
+
+import java.util.UUID;
+
+public interface IUniqueObject {
+
+  UUID id();
+}
